# mcp-firewall

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
docker/: Dockerfile
docs/: ARCHITECTURE.md  CONFIG.md  DESIGN_DECISIONS.md  FAQ.md  policy-cookbook.md  threat-model.md
examples/advanced/: policy.yml
examples/minimal/: policy.yml
examples/output/: README.md  demo-result.json
tests/: smoke.rs
