[package]
name = "mcp-firewall"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-firewall"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
policy = { path = "../policy" }
proxy = { path = "../proxy" }
audit = { path = "../audit" }
