[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
base64.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
dashmap.workspace = true
chrono.workspace = true
policy = { path = "../policy" }
audit = { path = "../audit" }
